# CLEANUP_Evaluation

./: README.md  TAE_Results.csv  config.json  config_INTACT.json  config_wiki553.json  config_wikiactors.json  dataframe_wikiactors.json  eval.py  eval_doc_clustering.py  pyproject.toml  requirements.txt  results.csv  results_wiki553.csv  results_wikiactors.csv  setup.py  tae.py
data/anonymizations/: TAB_all_Manual_INTACT.json  TAB_test_Presidio_Entity_Ildikó.json  TAB_test_Presidio_Supression_Ildikó.json  TAB_test_gpt-3.5-turbo-0125_mvm-st.json
data/tab/anonymizations/: TAB_test_Manual_INTACT.json  TAB_test_Manual_INTACT_202408_least_specific.json  TAB_test_Manual_INTACT_202408_most_specific.json  TAB_test_Manual_INTACT_llama3.1_least_specific.json  TAB_test_Manual_INTACT_llama3.1_most_specific.json  TAB_test_Manual_INTACT_llama3.1_selected.json  TAB_test_Manual_INTACT_llama3_least_specific.json  TAB_test_Manual_INTACT_llama3_most_specific.json  TAB_test_Manual_INTACT_llama3_selected.json  TAB_test_Presidio_Transformers_Entity.json
data/wikiactors/anonymizations/: WikiActors_Manual.json  WikiActors_Manual_old.json  WikiActors_NER3.json  WikiActors_NER4.json  WikiActors_NER7.json  WikiActors_Presidio.json  WikiActors_Word2Vec_t=0.25.json  WikiActors_Word2Vec_t=0.5.json  WikiActors_spaCy.json
data/wikiactors/bks/: WikiActors_500_filtered_BK=Public25%.json  WikiActors_50_eval_BK=Public.json  WikiActors_50_eval_BK=Public25%.json
data/wikiactors/corpora/: WikiActors_Corpus.json  WikiActors_Corpus_old.json
tae/: __main__.py  tae.py  tae_original.py  tri.py  utils.py
