[tool.poetry]
name = "tae"
version = "0.1.0"
description = "Text Anonymization Evaluator (TAE)"
authors = ["Benet Manzanares-Salor <benet.manzanares@urv.cat>"]
maintainers = ["Benet Manzanares-Salor <benet.manzanares@urv.cat>"]
keywords = ["text anonymization", "evaluation", "privacy", "utility", "nlp", "text processing", "language processing"]
repository = "https://github.com/NorskRegnesentral/tae"
license = "MIT"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3.9",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Text Processing",
    "Topic :: Text Processing :: Linguistic",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
packages = [{ include = "tae" }]

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
spacy = "^3.0"  # TODO: Check versions
scipy = "^1.5.4"
pandas = ">=0.23,<3.0"
# TODO: Add dependencies

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
spacy = "~3.5.3" # TODO: Check version

# Fixed spaCy model dependencies
en_core_web_md = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_md-3.5.0/en_core_web_md-3.5.0-py3-none-any.whl" }
en_core_web_lg = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_lg-3.5.0/en_core_web_lg-3.5.0-py3-none-any.whl" }

# Workaround for using up-to-date binary wheels for all Python versions
numpy = [
    { version = "~1.21.1", python = ">=3.7,<3.9" },
    { version = "~1.26", python = ">=3.9,<3.12" }
]
scipy = [
    { version = "~1.7.3", python = ">=3.7,<3.9" },
    { version = "~1.11.2", python = ">=3.9,<3.12" }
]
scikit-learn = [
    { version = "~1.0.2", python = ">=3.7,<3.8" },
    { version = "~1.3.1", python = ">=3.8,<3.12" }
]
pandas = [
    { version = "~1.3.5", python = ">=3.7,<3.9" },
    { version = "~2.1.1", python = ">=3.9,<3.12" }
]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"